--- a/flashcards.js/src/app/cards/cards.component.css
+++ b/flashcards.js/src/app/cards/cards.component.css
@@ -2,15 +2,14 @@
     height: 100%;
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
-    grid-template-rows: 25px 1fr auto 3fr 1fr 10px;
-    grid-row-gap: 1rem;
+    grid-template-rows: 1fr 25px 3fr 1fr;
+    grid-row-gap: 0;
+    align-items: center;
     grid-template-areas:
-        ". . ."
         ". decks ."
         ". progress-bar ."
         ". flashcard-container ."
-        ". buttons ."
-        ". . .";
+        ". buttons .";
 }
 
     #decks {
@@ -28,6 +27,7 @@
 
     #progress-bar {
         grid-area: progress-bar;
+        align-self: start;
         width: 100%;
         height: 16px;
         background-color: rgba(136, 124, 116, 0.25);
@@ -161,7 +161,7 @@
             #correct {
                 grid-area: correct;
                 justify-self: center;
-                width: 64px;
+                /* width: 64px; */
                 background-color: #41AD49;
                 color: white;
             }
@@ -169,7 +169,7 @@
             #incorrect {
                 grid-area: incorrect;
                 justify-self: center;
-                width: 64px;
+                /* width: 64px; */
                 background-color: #E44061;
                 color: white;
             }
@@ -177,7 +177,7 @@
         #skip {
             grid-area: skip;
             justify-self: end;
-            width: 64px;
+            /* width: 64px; */
             background-color: #238DB1;
             color: white;
         }
